--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ NODE_ENV=
 
 PORT=
 
-DATABASE_URL=
-JWT_SECRET=
+DATABASE_URL="postgresql://user:password@localhost:5432/default_db"
+JWT_SECRET="secret_here"
